# waterstand

./: .gitignore  CHANGELOG.md  README.md  build.sh  env.sh  pyproject.toml  requirements.txt  setup.py  upload.sh  uploadprod.sh  uploadtest.sh  waterstand.py
.github/workflows/: release.yaml  tests.yaml
tests/: test_waterstand.py  testdata.json  testdata1.json  testdata2.json  testdata4.json
waterstand/: __init__.py  waterstand.py
waterstand/tests/: test_waterstand.py
