[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waterstand"
version = "1.1.1"
authors = [
    { name = "Peter van de Riet", email = "vdriet@gmail.com" },
]
description = "package voor ophalen waterstand"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vdriet/waterstand"
Issues = "https://github.com/vdriet/waterstand/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
[tool.coverage.run]
omit = [
    "*/tests/*",
]
[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]
fail_under = 90
[tool.pylint]
init-hook = "import sys; sys.path.append('./lib/python3.11/site-packages/');sys.path.append('.')"
indent-string = "  "
