[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waterstand"
version = "1.2.0"
authors = [
    { name = "Peter van de Riet", email = "vdriet@gmail.com" },
]
description = "package voor ophalen waterstand"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vdriet/waterstand"
Issues = "https://github.com/vdriet/waterstand/issues"
Changelog = "https://github.com/vdriet/waterstand/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]
fail_under = 90

[tool.pylint]
indent-string = "  "
